Migrate from Anthropic Claude to OpenAI GPT
- Replace anthropic_api_key with openai_api_key in settings
- Update query_interpreter to use OpenAI API endpoint
- Use gpt-4o-mini model (comparable to Claude Haiku)
- Update docker-compose files with new env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ENV=development
       - DATABASE_URL=postgresql://scripe:scripe@db:5432/scripe
       - GOOGLE_PLACES_API_KEY=${GOOGLE_PLACES_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       - db
     volumes:
